--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ header {
 }
 .goal-section h2 {
   font-size: 1.6rem;
+  color: #394508;
 }
 .goal-section p {
   font-size: 0.68rem;
@@ -105,6 +106,7 @@ header {
 }
 .reliability-section h2 {
   font-size: 1.6rem;
+  color: #394508;
 }
 .reliability-section h4 {
   font-size: 0.68rem;
@@ -114,4 +116,30 @@ header {
   font-size: 0.68rem;
   font-weight: 500;
   color: #5D5D5D;
+}
+
+.software-section {
+  margin-top: 110px;
+  padding-bottom: 88px;
+}
+.software-section h2 {
+  font-size: 1.6rem;
+  color: #394508;
+}
+.software-section p {
+  font-size: 0.68rem;
+}
+
+.download-banner {
+  background-image: url(assets/images/downld_banner.png);
+  background-size: cover;
+  width: 100%;
+  height: 350px;
+}
+.download-banner .download-banner-content {
+  margin: 15px;
+}
+.download-banner h3 {
+  font-size: 1.2rem;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
