add footer section mobile view complete

--- a/style.css
+++ b/style.css
@@ -142,4 +142,29 @@ header {
 .download-banner h3 {
   font-size: 1.2rem;
   color: #FFFFFF;
+}
+
+.footer-section {
+  background-color: #EDEDED;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
+.footer-section .ftr-mt140-col {
+  margin-top: 140px;
+}
+.footer-section .ftr-contact {
+  font-size: 0.68rem;
+}
+.footer-section .ftr-contact p {
+  color: #5D5D5D;
+}
+.footer-section .ftr-contact a {
+  color: #000000;
+  display: block;
+  font-weight: 600;
+  text-decoration: none;
+}
+.footer-section .ftr-contact .mt-120 {
+  margin-top: 100px;
 }/*# sourceMappingURL=style.css.map */
