--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ header {
 .services-banner .services-box {
   width: 30%;
   height: 105px;
+  margin-right: 4px;
+  margin-left: 4px;
   background-color: #619111;
   border-radius: 4px;
   text-align: center;
@@ -67,9 +69,13 @@ header {
   font-size: 0.6rem;
 }
 
-.sponsers-section {
+.sponsers-section1 {
   margin-top: 84px;
   padding-bottom: 62px;
+}
+
+.sponsers-section2 {
+  display: none;
 }
 
 .motive-section h2 {
@@ -87,6 +93,10 @@ header {
 }
 .goal-section p {
   font-size: 0.68rem;
+}
+
+.card-row {
+  margin: 15px;
 }
 
 .card-box {
@@ -116,6 +126,10 @@ header {
   font-size: 0.68rem;
   font-weight: 500;
   color: #5D5D5D;
+}
+
+.person-banner2 {
+  display: none;
 }
 
 .software-section {
@@ -150,7 +164,7 @@ header {
   display: flex;
   justify-content: center;
 }
-.footer-section .ftr-mt140-col {
+.footer-section .mt-140 {
   margin-top: 140px;
 }
 .footer-section .ftr-contact {
@@ -167,4 +181,138 @@ header {
 }
 .footer-section .ftr-contact .mt-120 {
   margin-top: 100px;
+}
+
+@media screen and (min-width: 768px) {
+  .main-heading h1 {
+    font-size: 2.6rem;
+    width: 50%;
+  }
+  .services-banner .services-box {
+    margin-top: 50px;
+    width: 12rem;
+  }
+  .mtpb-40 {
+    padding-bottom: 5px;
+  }
+  .sponsers-section2 {
+    display: none;
+  }
+  .motive-section {
+    width: 50%;
+  }
+  .motive-section h2 {
+    margin-top: 50px;
+    padding-bottom: 80px;
+  }
+  .goal-section {
+    padding-bottom: 80px;
+  }
+  .goal-section .goal-text {
+    width: 60%;
+  }
+  .goal-section h2 {
+    font-size: 2.25rem;
+  }
+  .goal-section p {
+    color: #5D5D5D;
+  }
+  .card-row {
+    justify-content: space-between;
+  }
+  .card-box {
+    width: 49%;
+  }
+  .reliability-section {
+    padding-bottom: 120px;
+  }
+  .reliability-section h2 {
+    font-size: 2.2rem;
+  }
+  .person-banner2 {
+    display: block;
+  }
+  .person-banner1 {
+    display: none;
+  }
+  .download-banner {
+    background-image: url(assets/images/dwnlnd_tab.png);
+    background-size: cover;
+  }
+  .download-banner .download-banner-content {
+    margin: 50px;
+  }
+  .download-banner h3 {
+    font-size: 1.8rem;
+    color: #FFFFFF;
+    width: 60%;
+  }
+  .footer-section img {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+  }
+}
+@media screen and (min-width: 991px) {
+  .main-heading h1 {
+    font-size: 2.6rem;
+    width: 40%;
+  }
+  .services-banner .services-box {
+    width: 7rem;
+  }
+  .sponsers-section1 {
+    display: none;
+  }
+  .sponsers-section2 {
+    display: block;
+    padding-bottom: 160px;
+  }
+  .full-img-section {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+  .goal-section h2 {
+    font-size: 2.6rem;
+  }
+  .card-box {
+    height: 240px;
+  }
+  .reliability-section {
+    padding-bottom: 160px;
+  }
+  .reliability-section .reliability-row img {
+    width: 100%;
+  }
+  .reliability-section h2 {
+    font-size: 2.2rem;
+  }
+  .reliability-section h4 {
+    font-size: 0.8rem;
+  }
+  .reliability-section p {
+    font-size: 0.8rem;
+    width: 70%;
+  }
+  .person-banner2 {
+    display: block;
+  }
+  .person-banner1 {
+    display: none;
+  }
+  .software-section {
+    margin-top: 150px;
+    padding-bottom: 140px;
+  }
+  .software-section h2 {
+    font-size: 2.7rem;
+  }
+  .software-section p {
+    font-size: 0.8rem;
+  }
+  .download-banner h3 {
+    font-size: 2rem;
+    color: #FFFFFF;
+  }
 }/*# sourceMappingURL=style.css.map */
