--- a/style.scss
+++ b/style.scss
@@ -51,9 +51,15 @@ header {
   background-color: $darkGreen;
 }
 
+
 .lt-grn-btn {
   @include lightGreen-btn;
   background-color: $lightGreen;
+  box-shadow: 0px 2px 11px 0px rgb(21 36 16);
+
+  &:hover {
+    background-color: $midGreen;
+  }
 }
 
 // Main Heading
@@ -93,6 +99,11 @@ header {
     p {
       font-weight: 600;
     }
+
+    &:hover {
+      background-color: $lightGreen;
+      cursor: pointer;
+    }
   }
 }
 
@@ -102,7 +113,13 @@ header {
 
   p {
     @include small-grn-txt;
+
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
   }
+
 }
 
 // Sponserships Section
@@ -146,6 +163,7 @@ header {
 .card-box {
   background-color: $lightGreen;
   border-radius: 4px;
+  transition: 0.6s ease;
 
   .large-nmbr {
     font-size: 5.6rem;
@@ -154,6 +172,12 @@ header {
 
   p {
     margin-bottom: 30px;
+  }
+
+  &:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 2px 2px 0px #bcbcbc;
+    cursor: pointer;
   }
 }
 
@@ -195,6 +219,15 @@ header {
 
   p {
     font-size: 0.68rem;
+  }
+
+  img {
+    transition: 0.5s ease;
+
+    &:hover {
+      transform: translateY(-5px);
+      cursor: pointer;
+    }
   }
 }
 
@@ -356,14 +389,15 @@ header {
 
 // --->>DESKTOP VIEW <<----
 @media screen and (min-width: 991px) {
-.right-side {
-  background-color: #394508;
 
-  .section {
-    width: 33%;
-    position: fixed;
+  .right-side {
+    background-color: #394508;
+
+    .header-section {
+      width: 33%;
+      position: fixed;
+    }
   }
-}
 
   // Main Heading
   .main-heading {
