fix - generic margin and padding classes

--- a/style.css
+++ b/style.css
@@ -14,9 +14,12 @@ body {
   font-family: "Manrope-regular";
 }
 
-.mtpb-40 {
-  margin-top: 40px;
+.pb-40 {
   padding-bottom: 40px;
+}
+
+.mt-40 {
+  margin-top: 40px;
 }
 
 header {
